# transformers4math-simons

./: .gitignore  LICENSE  README.md  pyproject.toml
1_bigram/: README.md  bigrams.ipynb  bigrams_colab.ipynb
2_transformer/: README.md  transformer.ipynb  transformer_colab.ipynb
3_addition/: README.md  addition.ipynb  addition_colab.ipynb  generate_addition_data.py  makemore.py
4_graphs/: README.md  graph_utils.py  graphs.ipynb  graphs_colab.ipynb  local_search.py  makemore.py
4_graphs/data/: top_10_percent_graphs.txt
